Bug 448393 - "Add Widgets" context menu item causes Panel in "Auto-Hide" mode to hide again, making it impossible to add widgets to panel without entering Edit mode another way
Summary: "Add Widgets" context menu item causes Panel in "Auto-Hide" mode to hide agai...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.23.5
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: usability
: 480857 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-13 20:49 UTC by Eric Edlund
Modified: 2024-02-27 16:46 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Edlund 2022-01-13 20:49:27 UTC
SUMMARY
Add widgets menu hides panel making it impossible to add widgets to panel.

STEPS TO REPRODUCE
0. Panel is set to autohide
1. Enter edit mode
2. Open "Add new widgets" menu

OBSERVED RESULT
Panel is hidden

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Neon 5.23 User Edition
(available in About System)
KDE Plasma Version: 5.23.5
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2022-01-13 22:51:28 UTC
Yeahhh that's not great.

X11 or Wayland. Can confirm on Wayland.
Comment 2 Nate Graham 2023-09-18 20:27:39 UTC
Cannot confirm on Wayland anymore. Looks like something
Comment 3 Eric Edlund 2023-09-19 16:36:38 UTC
After pressing the panel Add Widget button, the panel is hidden and the widgets panel opens. I can select widgets to add, and they are added to the panel. The UI doesn't make it clear that the selected widgets are being added, and its not visible that they have changed until I leave edit mode. The behavior I would expect is that the panel is forced not to hide.

Wayland 5.27.7 Manjaro.
Comment 4 Thomas 2024-02-05 12:25:31 UTC
*** Bug 480857 has been marked as a duplicate of this bug. ***
Comment 5 Niccolò Venerandi 2024-02-16 20:52:14 UTC
Can reproduce, let's see if this is an easy fix…
Comment 6 Bug Janitor Service 2024-02-16 21:19:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3914
Comment 7 Nate Graham 2024-02-27 16:23:46 UTC
Git commit 461a7527f88487ccc75d24c4ad8b6e60632eaca5 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 27/02/2024 at 16:23.
Pushed by ngraham into branch 'master'.

Show panels on entering edit mode and "add widgets"

This will show all hidden panels when you enter edit mode; also, when
you click on "add widgets" edit mode will get triggered.
FIXED-IN: 6.0.1

M  +3    -1    shell/panelview.cpp
M  +9    -1    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/461a7527f88487ccc75d24c4ad8b6e60632eaca5
Comment 8 Nate Graham 2024-02-27 16:46:06 UTC
Git commit 8fc5105fec06e80cd2e6d1a3541bf0d8211d9c9f by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 27/02/2024 at 16:24.
Pushed by ngraham into branch 'Plasma/6.0'.

Show panels on entering edit mode and "add widgets"

This will show all hidden panels when you enter edit mode; also, when
you click on "add widgets" edit mode will get triggered.
FIXED-IN: 6.0.1


(cherry picked from commit 461a7527f88487ccc75d24c4ad8b6e60632eaca5)

M  +3    -1    shell/panelview.cpp
M  +9    -1    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/8fc5105fec06e80cd2e6d1a3541bf0d8211d9c9f