Show panels on entering edit mode and "add widgets"

This will show all hidden panels when you enter edit mode; also, when
you click on "add widgets" edit mode will get triggered.

BUG: 448393
FIXED-IN: 6.0.1


(cherry picked from commit 461a7527f88487ccc75d24c4ad8b6e60632eaca5)